dynamically_typed_tests/invalid/variables/became_valid/basicTypeErr09.wacc
# type mismatch: char <- string

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  c = "a"
end
